Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-5510

2.4.3<->2.5.3 interop: sanity-scrub test_15: FAIL: (7) Expected 'inconsistent' on mds1, but got 'inconsistent,upgrade'

XMLWordPrintable

    • 3
    • 15367

      sanity-scrub test 15 failed as follows:

      Started LFSCK on the MDT device lustre-MDT0000.
      CMD: shadow-46vm3 /usr/sbin/lctl get_param -n osd-ldiskfs.lustre-MDT0000.oi_scrub
      CMD: shadow-46vm3 /usr/sbin/lctl get_param -n osd-ldiskfs.lustre-MDT0000.oi_scrub
       sanity-scrub test_15: @@@@@@ FAIL: (7) Expected 'inconsistent' on mds1, but got 'inconsistent,upgrade' 
      

      Maloo report: https://testing.hpdd.intel.com/test_sets/6a6b507e-f8af-11e3-842c-5254006e85c2

            yong.fan nasf (Inactive)
            yujian Jian Yu
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: