lustre/osd-ldiskfs/osd_oi.c
@@ -139,6 +139,9 @@ static int osd_oi_index_create_one(struct osd_thread_info *info,
 		return PTR_ERR(inode);
 	}
 
+	ldiskfs_set_inode_state(inode, LDISKFS_STATE_LUSTRE_NOSCRUB);
+	unlock_new_inode(inode);
+
 	if (feat->dif_flags & DT_IND_VARKEY)
 		rc = iam_lvar_create(inode, feat->dif_keysize_max,
 				     feat->dif_ptrsize, feat->dif_recsize_max,
